# fastapi-template

./: pyproject.toml  requirements.txt
.github/workflows/: main.yml
api/: main.py
test/: test_main.py
