[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["nlubalo <nancyatienno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pytest = "^7.3.1"
requests = "^2.28.2"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
